init setup with client api and identity server 4

--- a/Solution1/WebApp.MVC/appsettings.json
+++ b/Solution1/WebApp.MVC/appsettings.json
@@ -14,7 +14,7 @@
   },
   "InteractiveServiceSettings": {
     "AuthorityUrl": "https://localhost:44311",
-    "ClientId": "WebApp.MVC",
+    "ClientId": "mvc_client",
     "ClientSecret": "secret",
     "Scopes": [ "read" ]
   },
