--- a/Solution1/IdentityServer/IdentityServer.csproj
+++ b/Solution1/IdentityServer/IdentityServer.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Views\RegisterConfirmation.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Views\RegisterConfirmation.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.13" />
