--- a/Solution1/WebApi1/appsettings.json
+++ b/Solution1/WebApi1/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    //"DefaultConnection": "DataSource=app.db"
+    //"DefaultConnection": "Server=sql5103.site4now.net;user id=DB_A6120D_aow_admin;password=aowKcn2b35;Database=DB_A6120D_aow;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=mysql5044.site4now.net;user id=a6120d_aownew;password=aowKcn2b35;Database=db_a6120d_aownew;SslMode=None"
+  },
+  "SwaggerOptions": {
+    "RouteTemplate": "/swagger/{documentName}/swagger.json",
+    "Description": "My API V1",
+    "UIEndpoint": "v1/swagger.json"
+  },
   "AllowedHosts": "*"
 }
