--- a/Solution1/WebApp.MVC/WebApp.MVC.csproj
+++ b/Solution1/WebApp.MVC/WebApp.MVC.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.13" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
