--- a/Solution1/WebApp.ThirdParty/WebApp.ThirdParty.csproj
+++ b/Solution1/WebApp.ThirdParty/WebApp.ThirdParty.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="5.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
