--- a/Solution1/IdentityServer/appsettings.json
+++ b/Solution1/IdentityServer/appsettings.json
@@ -8,8 +8,8 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AowCore.AppWeb-C1E6DB33-EF99-4B7F-8A1B-F0BC61DB5957;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=LAPTOP-PB7JTH2K\\MSSQLSERVER2019;user id=sa;password=Password789;Database=IdentityServerAOW;MultipleActiveResultSets=true"
-    //"DefaultConnection": "Server=sql5103.site4now.net;user id=DB_A6120D_identityserveraow_admin;password=Password!23;Database=DB_A6120D_identityserveraow;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=LAPTOP-PB7JTH2K\\MSSQLSERVER2019;user id=sa;password=Password789;Database=IdentityServerAOW;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=sql5103.site4now.net;user id=DB_A6120D_identityusers_admin;password=aowKcn2b35;Database=DB_A6120D_identityusers;MultipleActiveResultSets=true"
   },
   "EmailSender": {
     "Host": "mail5009.site4now.net",
