--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /Solution1/WebApi.IdentityUsers
+/Solution1/IdentityServer.Context/Migrations
